# Common-time

./: README.md
Common-Time/: pyproject.toml
Common-Time/demo/: config.yaml  generate_data.py  run_demo.py
Common-Time/demo/data/: station_A.csv  station_D_outlier.csv
Common-Time/demo/output/: common_signal.csv  residuals_station_C.csv
Common-Time/doc/: UseCase.md  WhitePaper.md
Common-Time/src/common_time/: __init__.py  cli.py  core.py
Common-Time/src/common_time.egg-info/: PKG-INFO  entry_points.txt
Common-Time/tests/: test_basic.py
demo/: README.md  plot_demo.py  run_demo.sh
demo/data/: station_B.csv  station_C.csv
demo/output/: residuals_station_A.csv  residuals_station_B.csv  residuals_station_D_outlier.csv  summary.json
doc/: CommercialUse.md
src/common_time.egg-info/: SOURCES.txt  top_level.txt
