[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "common-time"
version = "0.1.0"
description = "Common-Time: extract a robust common temporal signal from multiple time series"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.6"
]

[project.scripts]
common-time = "common_time.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
